Fixed carousel spacing
Fixed carousel spacing and changed styling of arrows. Added 2 more
carousels for Trending Projects and Recent Projects.

--- a/css/styles.css
+++ b/css/styles.css
@@ -309,7 +309,6 @@ a img{
 .snap-featured-section {
   position: relative;
   padding-top: 40px;
-  padding-bottom: 80px;
 }
 
 .snap-featured-title {
@@ -334,19 +333,12 @@ a img{
   font-size: 12px;
   letter-spacing: 0.3px;
   font-weight: 300;
-}
-
-
-
-.featured {
-  text-align: right;
-  width: 100%;
-  white-space: nowrap;
+  text-decoration: none;
 }
 
 .snap-featured {
   text-align: center;
-  width: 100%;
+  width: 90%;
   white-space: nowrap;
   overflow-x: auto;
 }
@@ -598,3 +590,12 @@ a img{
     font-weight: 300;
     color: #838c8e;
   }
+
+.slick-slide {
+  float: initial;
+  margin: 0 auto;
+}
+
+.snap-spacer {
+  height: 70px;
+}
